# tms_zephyr

./: .gitignore  CMakeLists.txt  README.md  sysbuild.conf
.west/: config
3rd_parties/: README.md
blue_leap/app_isw/: CMakeLists.txt
blue_leap/app_isw/src/: bl_isw.h  bl_isw_m4.c  bl_isw_m7.c  bl_zephyr_osal.c  bl_zephyr_osal_cfg.c  bl_zephyr_osal_cfg.h
blue_leap/app_m4/: CMakeLists.txt  prj.conf
blue_leap/app_m4/boards/: mimxrt1160_evk_mimxrt1166_cm4.overlay
blue_leap/app_m4/src/: main.c
blue_leap/app_m7/: CMakeLists.txt  prj.conf
blue_leap/app_m7/boards/: mimxrt1160_evk_mimxrt1166_cm7.overlay
blue_leap/app_m7/src/: main.c
blue_leap/cm4/: CMakeLists.txt
blue_leap/cm4/boards/: mimxrt1160_evk_mimxrt1166_cm4.overlay
blue_leap/cm7/boards/: mimxrt1160_evk_mimxrt1166_cm7.overlay
blue_leap/common/isw/: bl_isw_m4.c  bl_isw_m7.c  bl_zephyr_osal.c  bl_zephyr_osal.h
samples/open_amp/cm4/: CMakeLists.txt
samples/open_amp/cm7/: CMakeLists.txt  Kconfig.sysbuild  prj.conf  sysbuild.cmake.removed
samples/open_amp_rust/: README.md  TROUBLESHOOTING.md  sysbuild.cmake  sysbuild.conf  test_build_config.sh  verify_solution.sh
samples/open_amp_rust/cm4/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/open_amp_rust/cm4/boards/: mimxrt1160_evk_mimxrt1166_cm4.conf  mimxrt1160_evk_mimxrt1166_cm4.overlay
samples/open_amp_rust/cm4/rust_lib/: Cargo.toml
samples/open_amp_rust/cm4/rust_lib/src/: lib.rs
samples/open_amp_rust/cm4/src/: main.c
samples/open_amp_rust/cm7/: CMakeLists.txt  prj.conf  sample.yaml  sysbuild.cmake
samples/open_amp_rust/cm7/boards/: mimxrt1160_evk_mimxrt1166_cm7.conf  mimxrt1160_evk_mimxrt1166_cm7.overlay
samples/open_amp_rust/cm7/include/: zephyr_image_info.h
samples/open_amp_rust/cm7/rust_lib/: Cargo.toml
samples/open_amp_rust/cm7/rust_lib/src/: lib.rs
samples/open_amp_rust/cm7/src/: main.c
samples/open_amp_rust/common/include/: openamp_common.h
west-manifest/: west.yml
