
[package]
name = "rust_openamp_cm4"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Add any Rust dependencies here
# For embedded development, you might want:
# nb = "1.0"
# cortex-m = "0.7"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"

[profile.dev]
panic = "abort"
